# ClaudeContextTerminal

./: .env.example  .gitignore  Cargo.toml  OLLAMA_INTEGRATION.md  PORTING_PLAN.md  README.md  crush.example.json  goofy.json  tailwind.config.js
claude-context-terminal/: package-lock.json  package.json
claude-context-terminal/src-tauri/: tauri.conf.json
claude-context-terminal/src-tauri/migrations/: 001_initial.sql
claude-context-terminal/src-tauri/src/: lib.rs
claude-context-terminal/src/contexts/: ContextProvider.tsx  KanbanProvider.tsx
claude-context-terminal/src/styles/: globals.css
docs/porting/: phase1.md  phase2.md  phase3.md  phase4.md
examples/: logo_demo.rs
src/: App.tsx  main.rs  version.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/claude/: cli_runner.rs
src-tauri/src/commands/: context_commands.rs  kanban_commands.rs
src-tauri/src/context/: mod.rs  (+1 more)
src-tauri/templates/: requirements.md
src/app/: agent.rs  events.rs  mod.rs
src/cli/: logs.rs  mod.rs  root.rs  run.rs  schema.rs
src/config/: advanced.rs  lsp.rs  mod.rs
src/llm/: anthropic.rs  azure.rs  errors.rs  mod.rs  ollama.rs  openai.rs  provider.rs  types.rs
src/lsp/: client.rs  manager.rs  mod.rs  protocol.rs  types.rs
src/mcp/: mod.rs  types.rs
src/permission/: manager.rs  mod.rs  validator.rs
src/services/: api.ts
src/session/: conversation.rs  database.rs  database_fix.rs  mod.rs  queries.rs  session.rs
src/tui/: app.rs  events.rs  keys.rs  mod.rs  polish.rs  styles.rs  utils.rs
src/types/: index.ts
src/utils/: fs.rs  mod.rs  text.rs
(+127 files in other folders)
